make it look like twitter

--- a/index.html
+++ b/index.html
@@ -18,82 +18,13 @@
 <body>
     <h1>Feed Reader</h1>
     <div class="result">
-      <div class="loading">
-        <img src="https://www.script-tutorials.com/demos/82/images/loading.gif" alt="loading RSS feed" />
-      </div>
+        <div class="loading">
+            <img src="https://www.script-tutorials.com/demos/82/images/loading.gif" alt="loading RSS feed" />
+        </div>
 
-
-      <!-- this is what gets displayed when feed finish loading -->
-      <!-- <p class="feed-des">
-          Queryfeed searches in Twitter, Google+ and gives you a nice RSS. Enjoy!
-      </p>
-      <h2>Queryfeed | @pinkoi</h2>
-      <p class="feed-url">
-          feedUrl: <span>https://queryfeed.net/twitter?q=%40pinkoi&title-type=user-name-both&geocode=</span>
-      </p>
-
-      <article>
-          <div class="feeditem-title">
-              <span><a class="feeditem-link" href="http://twitter.com/twitter/status/751623069412700160">Claire @EPBMS</a></span>
-          </div>
-          <div class="feeditem-content">
-              <a href="https://www.pinkoi.com/store/epbms">pinkoi.com/store/epbms</a> 來自 @pinkoi
-          </div>
-          <div class="feeditem-date">
-              <span>Fri, 08 Jul 2016 21:23:46 -0700</span>
-          </div>
-      </article>
-
-      <article>
-          <div class="feeditem-title">
-              <span><a class="feeditem-link" href="http://twitter.com/twitter/status/751623069412700160">mamyu-utasya @mamyu7utasha</a></span>
-          </div>
-          <div class="feeditem-content">
-              海底の宝石箱。日本人アーティストKusumoto Marikoさんの3Dジュエリー Pinkoi Pinkoi Zine・マガジン <a href="http://jp.pinkoi.com/magz/DhNYCh89">jp.pinkoi.com/magz/DhNYCh89</a> @pinkoiさんから
-          </div>
-          <div class="feeditem-date">
-              <span>Fri, 08 Jul 2016 20:44:38 -0700</span>
-          </div>
-      </article>
-
-      <article>
-          <div class="feeditem-title">
-              <span><a class="feeditem-link" href="http://twitter.com/twitter/status/751623069412700160">SIRO/4.i8M @SIRO4i8SATO</a></span>
-          </div>
-          <div class="feeditem-content">
-              海底の宝石箱。日本人アーティストKusumoto Marikoさんの3Dジュエリー Pinkoi Pinkoi Zine・マガジン <a href="http://jp.pinkoi.com/magz/DhNYCh89">jp.pinkoi.com/magz/DhNYCh89</a> @pinkoiさんから
-          </div>
-          <div class="feeditem-date">
-              <span>Fri, 08 Jul 2016 18:17:46 -0700</span>
-          </div>
-      </article>
-
-      <article>
-          <div class="feeditem-title">
-              <span><a class="feeditem-link" href="http://twitter.com/twitter/status/751623069412700160">nao* @sainotsuno</a></span>
-          </div>
-          <div class="feeditem-content">
-              <a href="http://jp.pinkoi.com/magz/DhNYCh89">jp.pinkoi.com/magz/DhNYCh89</a> @pinkoiさんから 綺麗な作品だなぁ
-          </div>
-          <div class="feeditem-date">
-              <span>Fri, 08 Jul 2016 15:12:00 -0700</span>
-          </div>
-      </article>
-
-      <article>
-          <div class="feeditem-title">
-              <span><a class="feeditem-link" href="http://twitter.com/twitter/status/751623069412700160">mamyu-utasya @mamyu7utasha</a></span>
-          </div>
-          <div class="feeditem-content">
-              海底の宝石箱。日本人アーティストKusumoto Marikoさんの3Dジュエリー Pinkoi Pinkoi Zine・マガジン <a href="http://jp.pinkoi.com/magz/DhNYCh89">jp.pinkoi.com/magz/DhNYCh89</a> @pinkoiさんから
-          </div>
-          <div class="feeditem-date">
-              <span>Fri, 08 Jul 2016 20:44:38 -0700</span>
-          </div>
-      </article> -->
+        <!-- below is what gets displayed when feed finish loading -->
 
     </div>
-
 
     <!-- I use this google API to parse the XML feed to JSON format -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
